[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/prefabs/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/main/game.gd" type="Script" id=2]
[ext_resource path="res://scripts/main/TileMap.gd" type="Script" id=3]
[ext_resource path="res://scripts/main/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/gfx/tiles.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/TerminusTTF-4.49.1.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/prefabs/main.tres" type="TileSet" id=7]
[ext_resource path="res://assets/gfx/light.png" type="Texture" id=8]
[ext_resource path="res://assets/gfx/game.tres" type="Material" id=9]
[ext_resource path="res://scripts/inventory/slot.gd" type="Script" id=10]
[ext_resource path="res://scripts/inventory/inventory.gd" type="Script" id=11]
[ext_resource path="res://scripts/inventory/bottom_bar.gd" type="Script" id=12]

[sub_resource type="CanvasItemMaterial" id=30]
next_pass = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 7
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 2 )

[sub_resource type="ShaderMaterial" id=25]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 105, 234, 15, 18 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 75, 234, 15, 18 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 90, 234, 15, 18 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 120, 216, 15, 18 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 120, 234, 15, 18 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 105, 216, 15, 18 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 105, 234, 15, 18 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walky",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walkx-up",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walkx-down",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 20, 0, 20 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
hue_variation = -0.07
hue_variation_random = 1.0

[sub_resource type="GDScript" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 2 )
uuid = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
material = SubResource( 30 )
position = Vector2( 0, -1 )
color = Color( 0, 0, 0, 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 185, 109 )
z_index = 2
script = ExtResource( 4 )

[node name="c" type="CanvasLayer" parent="Player"]

[node name="died_text" type="Label" parent="Player/c"]
margin_left = 118.0
margin_top = 56.0
margin_right = 233.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 106, 75 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 6 )
text = "YOU DIED"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l" type="Label" parent="Player/c/died_text"]
margin_left = 1.0
margin_top = 1.0
margin_right = 116.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 106, 75 )
custom_colors/font_color = Color( 0.14902, 0.14902, 0.14902, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 6 )
text = "YOU DIED"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="Player/c"]
margin_left = 8.0
margin_top = 155.0
margin_right = 129.0
margin_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p" type="Panel" parent="Player/c/m"]
margin_right = 121.0
margin_bottom = 40.0

[node name="l" type="Label" parent="Player/c/m/p"]
margin_left = 2.0
margin_top = 1.0
margin_right = 117.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, -27 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 4 )
text = "console"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m2" type="MarginContainer" parent="Player/c"]
margin_left = 284.0
margin_top = 10.0
margin_right = 405.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p" type="Panel" parent="Player/c/m2"]
margin_right = 121.0
margin_bottom = 40.0
__meta__ = {
"_editor_description_": ""
}

[node name="plc" type="Label" parent="Player/c/m2/p"]
margin_left = 1.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( -160, 13 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 4 )
text = "players:
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pl" type="Label" parent="Player/c/m2/p/plc"]
margin_top = 10.0
margin_right = 40.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -160, 13 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 4 )
text = "..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node" parent="Player/c"]

[node name="inventory" type="Panel" parent="Player/c"]
margin_left = 245.0
margin_top = 60.0
margin_right = 334.0
margin_bottom = 161.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotsContainer" type="ScrollContainer" parent="Player/c/inventory"]
margin_left = 2.0
margin_top = 5.0
margin_right = 86.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="GridContainer" parent="Player/c/inventory/SlotsContainer"]
columns = 3

[node name="bottom_panel" type="Panel" parent="Player/c"]
margin_left = 133.0
margin_top = 173.0
margin_right = 235.0
margin_bottom = 195.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="Player/c/bottom_panel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 101.0
margin_bottom = 21.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Player/c/bottom_panel/grid"]
script = ExtResource( 10 )

[node name="Panel2" type="Panel" parent="Player/c/bottom_panel/grid"]
margin_left = 4.0
margin_right = 4.0
script = ExtResource( 10 )

[node name="Panel3" type="Panel" parent="Player/c/bottom_panel/grid"]
margin_left = 8.0
margin_right = 8.0
script = ExtResource( 10 )

[node name="Panel4" type="Panel" parent="Player/c/bottom_panel/grid"]
margin_left = 12.0
margin_right = 12.0
script = ExtResource( 10 )

[node name="Panel5" type="Panel" parent="Player/c/bottom_panel/grid"]
margin_left = 16.0
margin_right = 16.0
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="Player"]
material = ExtResource( 9 )
position = Vector2( -9, -7 )
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -8, -2 )
shape = SubResource( 1 )

[node name="p" type="AnimatedSprite" parent="Player"]
material = SubResource( 25 )
position = Vector2( -8.00001, -8.5 )
scale = Vector2( 1.2, 1.13333 )
frames = SubResource( 15 )
animation = "walkx-up"
frame = 1
playing = true

[node name="pain" type="Particles2D" parent="Player"]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( -3, -8 )
emitting = false
amount = 4
lifetime = 0.7
one_shot = true
speed_scale = 3.0
explosiveness = 0.14
randomness = 0.98
visibility_rect = Rect2( 0, 0, 0, 0 )
process_material = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="Player"]
position = Vector2( -7, -7 )
texture = ExtResource( 8 )
texture_scale = 0.4
energy = 0.5
shadow_enabled = true
shadow_color = Color( 0.0431373, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ground" type="Node" parent="."]
script = SubResource( 3 )

[node name="layer0" type="TileMap" parent="ground"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1
script = ExtResource( 3 )

[node name="layer1" type="TileMap" parent="ground"]
z_index = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1

[node name="players_source" type="Node" parent="."]
